# -*- coding: utf-8 -*-

[workspace]
members = [
    "cms-cgi",
    "cms-fsd",
    "cms-ident",
    "cms-postd",
    "cms-socket",
    "cms-socket-back",
    "cms-socket-db",
    "cms-socket-post",
    "cms-systemd",
]
resolver = "2"

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
strip = "symbols"
debug-assertions = false
overflow-checks = true
codegen-units = 1

# vim: ts=4 sw=4 expandtab
