# -*- coding: utf-8 -*-

[workspace]
members = [
    # Webserver CGI frontend:
    "cms-cgi",          # Webserver CGI executable.

    # Daemons:
    "cms-backd",        # Backend daemon.
    "cms-fsd",          # Database access daemon.
    "cms-postd",        # Post execution daemon.

    # Daemon communication sockets:
    "cms-socket",       # Generic socket abstraction.
    "cms-socket-back",  # Backend daemon access socket.
    "cms-socket-db",    # Database daemon access socket.
    "cms-socket-post",  # Post daemon access socket.

    # Helper libraries:
    "cms-ident",        # CMS page identifier encapsulation.
    "cms-systemd",      # Systemd daemon helper routines.
    "cms-seccomp",      # Seccomp abstraction.
]
resolver = "2"

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
strip = "symbols"
debug-assertions = false
overflow-checks = true
codegen-units = 1

# vim: ts=4 sw=4 expandtab
