# -*- coding: utf-8 -*-

[package]
name = "cms-backd"
version = "1.0.0"
edition = "2021"
license = "GPL-2.0-or-later"
authors = [ "Michael Büsch <m@bues.ch>" ]
publish = false

[dependencies]
anyhow = "1"
async-recursion = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
cms-ident = { path = "../cms-ident" }
cms-seccomp = { path = "../cms-seccomp" }
cms-socket = { path = "../cms-socket" }
cms-socket-back = { path = "../cms-socket-back" }
cms-socket-db = { path = "../cms-socket-db" }
cms-socket-post = { path = "../cms-socket-post" }
configparser = "3"
crunchy = { git = "https://github.com/mbuesch/crunchy.git", rev = "433a4d08b859031f22d80197931c555c8af7b1fb" }
html-escape = "0.2"
image = { version = "0.25", default-features = false, features = [ "jpeg", "png", "gif", "webp" ] }
lru = "0.12"
multer = { version = "3", features = [ "tokio-io" ] }
peekable-fwd-bwd = "1"
rand = "0.8"
tokio = { version = "1", features = [ "rt", "rt-multi-thread", "sync", "signal", "macros" ] }
url-escape = "0.1"

# vim: ts=4 sw=4 expandtab
