# -*- coding: utf-8 -*-

[package]
name = "cms-backd"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [ "Michael Büsch <m@bues.ch>" ]
publish = false

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
cms-ident = { path = "../cms-ident" }
cms-seccomp = { path = "../cms-seccomp" }
cms-socket = { path = "../cms-socket" }
cms-socket-back = { path = "../cms-socket-back" }
cms-socket-db = { path = "../cms-socket-db" }
cms-socket-post = { path = "../cms-socket-post" }
configparser = "3"
html-escape = "0.2"
image = { version = "0.25", default-features = false, features = [ "jpeg", "png", "gif", "webp" ] }
lru = "0.12"
multer = { version = "3", features = [ "tokio-io" ] }
peekable-fwd-bwd = "1"
rand = "0.8"
tokio = { version = "1", features = [ "rt", "rt-multi-thread", "sync", "signal", "macros" ] }
url-escape = "0.1"

# vim: ts=4 sw=4 expandtab
