# -*- coding: utf-8 -*-

[package]
name = "cms-backd"
version = "1.0.0"
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
publish = false

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = [ "derive" ] }
cms-ident = { workspace = true }
cms-seccomp = { workspace = true }
cms-socket = { workspace = true }
cms-socket-back = { workspace = true }
cms-socket-db = { workspace = true }
cms-socket-post = { workspace = true }
configparser = { workspace = true }
html-escape = { workspace = true }
image = { workspace = true, default-features = false, features = [ "jpeg", "png", "gif", "webp" ] }
lru = { workspace = true }
multer = { workspace = true, features = [ "tokio-io" ] }
peekable-fwd-bwd = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = [ "rt", "rt-multi-thread", "sync", "signal", "macros" ] }
url-escape = { workspace = true }

# vim: ts=4 sw=4 expandtab
