# -*- coding: utf-8 -*-

[package]
name = "cms-cgi"
version = "1.0.0"
edition = "2021"
license = "GPL-2.0-or-later"
authors = [ "Michael Büsch <m@bues.ch>" ]
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
cms-ident = { path = "../cms-ident" }
cms-seccomp = { path = "../cms-seccomp" }
cms-socket = { path = "../cms-socket" }
cms-socket-back = { path = "../cms-socket-back" }
querystrong = "0.3"

# vim: ts=4 sw=4 expandtab
