# -*- coding: utf-8 -*-

[package]
name = "cms-fsd"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [ "Michael Büsch <m@bues.ch>" ]
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
cms-ident = { path = "../cms-ident" }
cms-seccomp = { path = "../cms-seccomp" }
cms-socket = { path = "../cms-socket" }
cms-socket-db = { path = "../cms-socket-db" }
inotify = "0.10"
lazy_static = "1"
lru = "0.12"
tokio = { version = "1", features = [ "rt", "rt-multi-thread", "sync", "signal", "macros", "fs", "io-util", "time" ] }

# vim: ts=4 sw=4 expandtab
