# -*- coding: utf-8 -*-

[package]
name = "cms-fsd"
version = "1.0.0"
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
publish = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = [ "derive" ] }
cms-ident = { workspace = true }
cms-seccomp = { workspace = true }
cms-socket = { workspace = true }
cms-socket-db = { workspace = true }
inotify = { workspace = true }
lru = { workspace = true }
tokio = { workspace = true }

# vim: ts=4 sw=4 expandtab
