# -*- coding: utf-8 -*-

[package]
name = "cms-postd"
version = "1.0.0"
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
publish = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = [ "derive" ] }
cms-ident = { workspace = true }
cms-socket = { workspace = true }
cms-socket-post = { workspace = true }
pyo3 = { workspace = true, features = [ "abi3", "auto-initialize", "anyhow" ] }
tokio = { workspace = true, features = [ "rt", "rt-multi-thread", "sync", "signal", "macros", "fs", "io-util", "time" ] }

# vim: ts=4 sw=4 expandtab
