# -*- coding: utf-8 -*-

[package]
name = "cms-seccomp"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [ "Michael Büsch <m@bues.ch>" ]
publish = false

[features]
default = []
# Include old syscalls in filters that are usually not used by modern libc.
oldsyscalls = []

[dependencies]
anyhow = "1"
libc = "0.2"
seccompiler = "0.4"

# vim: ts=4 sw=4 expandtab
