# -*- coding: utf-8 -*-

[package]
name = "cms-seccomp"
version = "1.0.0"
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
publish = false

[features]
default = []
# Include old syscalls in filters that are usually not used by modern libc.
oldsyscalls = []

[dependencies]
anyhow = { workspace = true }
libc = { workspace = true }
seccompiler = { workspace = true }

# vim: ts=4 sw=4 expandtab
