# -*- coding: utf-8 -*-

[package]
name = "cms-seccomp"
version = "1.0.0"
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
publish = false

[dependencies]
anyhow = { workspace = true }
libc = { workspace = true }
seccompiler = { workspace = true }

# vim: ts=4 sw=4 expandtab
