# -*- coding: utf-8 -*-

[package]
name = "cms-socket-back"
version = "1.0.0"
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
publish = false

[dependencies]
anyhow = { workspace = true }
cms-ident = { workspace = true }
cms-socket = { workspace = true }
rkyv = { workspace = true }

# vim: ts=4 sw=4 expandtab
