# -*- coding: utf-8 -*-

[package]
name = "cms-socket-db"
version = "1.0.0"
edition = "2021"
license = "GPL-2.0-or-later"
authors = [ "Michael Büsch <m@bues.ch>" ]
publish = false

[dependencies]
anyhow = "1"
bincode = "1"
cms-ident = { path = "../cms-ident" }
cms-socket = { path = "../cms-socket" }
serde = { version = "1", features = [ "derive" ] }

# vim: ts=4 sw=4 expandtab
