# -*- coding: utf-8 -*-

[package]
name = "cms-socket"
version = "1.0.0"
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
publish = false

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
cms-systemd = { workspace = true }
libc = { workspace = true }
serde = { workspace = true, features = [ "derive" ] }
tokio = { workspace = true, features = [ "net" ] }

# vim: ts=4 sw=4 expandtab
