# -*- coding: utf-8 -*-

[package]
name = "cms-systemd"
version = "1.0.0"
edition = "2021"
license = "GPL-2.0-or-later"
authors = [ "Michael Büsch <m@bues.ch>" ]
publish = false

[dependencies]
anyhow = "1"
#sd-notify = "0.4"
sd-notify = { git = "https://github.com/mbuesch/sd-notify.git", branch = "fix-cloexec-bit" }

# vim: ts=4 sw=4 expandtab
